--- a/1402.1972/1402.1972.tex
+++ b/1402.1972/1402.1972.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt]{article}
+\documentclass[12pt]{article}
 %\usepackage{showkeys}
  \usepackage{graphicx}
 %\input{CatorLandsmanPreamble.tex}
@@ -16,8 +16,51 @@
 \newtheorem{Proposition}[Definition]{Proposition}
 \newtheorem{Example}[Definition]{Example}
 \newtheorem{Corollary}[Definition]{Corollary}
-\topmargin = - 1 cm \textheight = 23 cm \textwidth = 15 cm
-\oddsidemargin = 0.9 cm \evensidemargin = 0.9 cm
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.05}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \newcommand{\epr}{{\sc epr}}
 \renewcommand{\L}{\label} 
 \newcommand{\quar}{\mbox{\footnotesize $\frac{1}{4}$}}
@@ -157,9 +200,10 @@ $\Box$}\par\vskip\tempskip\vskip\abovedisplayskip\@doendpe}
 \author{Eric Cator and Klaas Landsman\\ \mbox{} \hfill \\
 Institute for Mathematics, Astrophysics, and Particle Physics\\ Faculty of Science, Radboud University Nijmegen\\
 \texttt{e.cator@science.ru.nl, landsman@math.ru.nl}}
-\date{\today}
-\maketitle\vspace{-1cm}
- \begin{abstract} 
+\date{19 May 2014}
+\maketitle
+
+\begin{abstract} 
 \noindent 
 Bell's Theorem from 1964 and the (Strong) Free Will Theorem of Conway and Kochen from 2009 both exclude deterministic hidden variable theories (or, in modern parlance, `ontological models') 
 that are compatible with some small fragment of \qm, admit `free' settings of the archetypal Alice\&Bob experiment, and satisfy a locality condition akin to Parameter Independence. We clarify the relationship between these theorems by giving reformulations 
@@ -167,7 +211,8 @@ of both that exactly pinpoint their resemblance and their differences.  Our refo
 Bell's later generalization of his theorem to stochastic hidden variable theories.
 
 \end{abstract}
-\maketitle
+\newpage
+
 \section{Introduction}
 
 Though not really new,\footnote{Analogous earlier results were obtained, in chronological order, by Heywood \& Redhead \cite{HR}, Stairs \cite{Stairs}, Brown \& Svetlichny \cite{BS}, and Clifton \cite{Clifton} (of which only \cite{HR} was cited by Conway and Kochen).}  the (Strong) Free Will Theorem of Conway and Kochen  \cite{CK1,CK2} is one of the sharpest and most interesting results that give constraints on determinism. It does so by  proving that determinism is incompatible with a number of \emph{a priori} desirable assumptions, including a small fragment of \qm\ (viz.\ the theory of two \epr-correlated spin-one particles), the free choice of settings of an \epr-style bipartite experiment involving such particles, and a  locality 
@@ -231,7 +276,6 @@ $F=F(A,Z)$ and $G=G(B,Z)$,
  $(A,B,Z)$ are probabilistically independent relative to  $P$.\footnote{On the usual definition, this also implies that the pairs $(A,B)$, $(A,Z)$, and $(B,Z)$ are independent.}
 \end{itemize}
 \end{Definition}
-\newpage
 \noindent Here $Z$ is the traditional `hidden variable' space that, in the spirit of Bell \cite{Bell4,Norsen1,SU},
 carries exactly the  `ontological' information (including e.g.\ the photon variables) that is:
 \begin{description}
@@ -347,7 +391,6 @@ Our reformulation of the Strong Free Will Theorem \cite{BS,Clifton,CK2,HR,Stairs
 \begin{Theorem}\label{CKFWT}
 Determinism, Parameter Independence, Freedom,  and Nature (here represented by the outcome \er{ienj} of the Free Will Experiment) are  contradictory.
 \end{Theorem}
-\newpage
 \emph{Proof.} 
 The Freedom assumption allows us to treat $(\ba,\bb,z)$ as free variables, a fact that will tacitly be used all the time.
 First, take $i=j$ in \er{ienj}. This shows that  $\hat{F}_i(\vec{a}_1,\vec{a}_2,\vec{a}_3,z)$ only depends on $(\vec{a}_i,z)$, whilst
@@ -393,6 +436,8 @@ P(F=\lm,G=\mu|A=\al,B=\beta)=\til{P}_Z(\til{F}_{\al}=\lm,\til{G}_{\beta}=\mu), \
 \end{equation}
 cf.\ \er{crux2bis}, so that the proof may be completed exactly as in the case of Theorem \ref{Bell1964}. \enp
 \begin{thebibliography}{99}
+\raggedright
+
 \bibitem{Appleby} D.M. Appleby, The Bell--Kochen--Specker theorem, \emph{Studies in History and Philosophy of Modern Physics} 36, 1--28 (2005).
 \bibitem{BK} J. Barrett, A. Kent,  Non-contextuality, finite precision measurement and the Kochen--Specker theorem, \emph{Studies In History and Philosophy of Modern Physics} 35, 151--176 (2004).
 \bibitem{Bell1} J.S. Bell, On the Einstein--Podolsky--Rosen Paradox, \emph{Physics} 1, 195--200 (1964).
