--- a/1710.00868/Remarks-borns-rule.tex
+++ b/1710.00868/Remarks-borns-rule.tex
@@ -1,4 +1,4 @@
-\documentclass{article} 
+\documentclass[12pt]{article} 
 
 \usepackage{graphicx}
  \usepackage{epstopdf}
@@ -8,14 +8,55 @@
 	\usepackage{amsthm}
 	\usepackage{amssymb}
 \usepackage{enumitem}
-  
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=.6in, bottom=.9in]{geometry}
+\linespread{1.1}
+\sloppy
+\raggedbottom
+\pagestyle{plain}
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/cmrsum}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage{cite}
+\usepackage{microtype}
+
+% hyperref last because otherwise some things go wrong.
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+
+% make sure there is enough TOC for reasonable pdf bookmarks.
+\setcounter{tocdepth}{3}
+
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/fix-revtex-12.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
+%\pdfbookmark[1]{Introduction}{Introduction}
+
 \setlist[enumerate]{leftmargin=*}
-     \textwidth=6in
-    \hoffset=-.5in
    \title{Born's Rule, EPR, and the Free Will Theorem}
    \author{Simon Kochen}
    \begin{document}
-   
+\date{2 Oct 2017}
    \maketitle
  
     \newcommand\cH{\mathcal{H}}
@@ -43,8 +84,9 @@
     \newcommand\ppsi{\psi} 
   \theoremstyle{definition}
 \newtheorem*{defin}{Definition}
- 
-\section*{Introduction}
+
+
+\section{Introduction}
 
 It is a historic irony that while Einstein devised the EPR experiment in order to show via special relativity that quantum mechanics is incomplete, many current physicists think the EPR experiment exhibits instantaneous effects that contradict strict Lorentz invariance. To be sure, these effects cannot be used to send superluminal signals, so most physicists feel free to ignore this glaring contradiction to special relativity.
 
@@ -59,8 +101,8 @@ I agree with Penrose that if the EPR experiment yields a superluminal effect, th
 
 The arguments below are not the only ones against non-local effects of EPR. For instance, the paper [3] gives an argument based on a quantum erasure experiment to show the effects are local. Given the continuing controversy over non-locality, I may perhaps be forgiven for the careful exposition of well-known elementary topics.  
 
-\section*{Born's Rule}
-It will suffice to state the rule for a discrete observable $A$ of a system which is in a pure state given by the vector $\Omega$. Let $A = \sum \lambda_i P_i$  be the spectral decomposition of $A$. Then Born's rule says that the probability that a measurement of $A$ will give the value $\lambda_k$  is $<\Omega, P_k \Omega>$, and the system after the measurement is in the (unnormalized) state $P_k\Omega$ by the projection postulate.
+\section{Born's Rule}
+It will suffice to state the rule for a discrete observable $A$ of a system which is in a pure state given by the vector $\Omega$. Let $A = \sum \lambda_i P_i$  be the spectral decomposition of $A$. Then Born's rule says that the probability that a measurement of $A$ will give the value $\lambda_k$  is $\langle \Omega, P_k \Omega \rangle$, and the system after the measurement is in the (unnormalized) state $P_k\Omega$ by the projection postulate.
 
 In particular, if $\Omega$  is an eigenstate of $A$, so that $A \Omega = \lambda_k \Omega$ , say, then the observable $A$ has probability 1 of giving the value $\lambda_k$  and being in the state $P_k\Omega$  after the measurement of $A$. Thus, the observable $A$ is certain to give the value $\lambda_k$ if it is measured. Nothing is said about the value of $A$ before the measurement, and in particular that $A$ already has the value $\lambda_k$ \footnote{The same point is made in various text books. For instance, in [4] we see: ``Thus we can conclude that an eigenstate $\psi_j$ of an operator $P$ is a state in which the system yields with certainty the value $p_j$ [the eigenvalue belonging to $\psi_j$] \textit{when the observable corresponding to $P$ is measured}."       [italics added]}. If an eclipse is certain to happen tomorrow, we do not say that it has already happened.
 
@@ -70,13 +112,16 @@ It is this Boolean algebra $B$, \textit{the interaction algebra}, that acquires 
 
 That a measurement gives rise to a Boolean algebra of properties with truth values is not simply a consequence of quantum theory, but is, as noted by Kolmogorov in his classic book on probability [5], the case for any theory. Consider a classical experiment of throwing a die. There are six possible outcomes, the elementary events. Compound events, such as ``an even number of dots" or ``not two dots", are then among the 64 $(= 2^6)$ elements of the Boolean algebra generated by the elementary events. Similarly, the quantum Stern-Gerlach experiment to measure the $z$ component of spin of a spin 1 particle has three possible outcomes on the detector screen, which generate the eight element Boolean algebra of compound events. The outcomes correspond to properties of the measured system, in this case the spin properties $S_z = 0,+1,-1,$ given by the spectral decomposition of $S_z$.  These three properties generate a Boolean algebra, the interaction algebra, which is isomorphic to the Boolean algebra of events.  The actual spot on the detector determines the truth values of the compound events, and hence of all the elements of the interaction algebra of properties. In the case of an infinite number of properties the algebra generated forms a Boolean $\sigma$-algebra.(See [6] for details).
 
-\section*{EPR}
+\section{EPR}
 We will discuss the EPR experiment in the Bohm form of two spin $\frac{1}{2}$ particles in the singlet state $\Gamma$ of total spin 0. Suppose that in that state the two particles are separated and the spin component $s_z$ of particle 1 is measured in some direction $z$. That means that the observable $s_z\otimes I$ of the combined system is being measured. 
 
- Let $P_z^\pm  = \frac{1}{2} I \pm s_z.$ We have the spectral decomposition $s_z\otimes I = (\frac{1}{2})P^+_z\otimes I + (-\frac{1}{2})P_z^-\otimes I,$                                                                                                                                                                                            so the interaction algebra is the Boolean algebra $B_1 = \{ P_z^+\otimes I, P_z^-\otimes I,1,0\}.$                                                                                                                                                                                                                               We may write the singlet state $\Gamma = \sqrt{\frac{1}{2}}(\psi^+_z\otimes \psi^-_z - \psi_z^- \otimes \psi_z^+),$ where $P_z^\pm \psi_z^\pm = \psi_z^\pm.$
- 
-
-Then  \\   $P_z^+\otimes I(\Gamma) = \sqrt{\frac{1}{2}} (\psi_z^+\otimes \psi_z^-)\\                                                                                                                                                                                                                                                                                                                        P_z^-\otimes I(\Gamma) = \sqrt{\frac{1}{2}} (\psi_z^- \otimes \psi_z^+).$
+ Let $P_z^\pm  = \frac{1}{2} I \pm s_z.$ We have the spectral decomposition $s_z\otimes I = (\frac{1}{2})P^+_z\otimes I + (-\frac{1}{2})P_z^-\otimes I,$                                                                                                                                                                                            so the interaction algebra is the Boolean algebra $B_1 = \{ P_z^+\otimes I, P_z^-\otimes I,1,0\}.$                                                                                                                                                                                                                               We may write the singlet state $\Gamma = \sqrt{\frac{1}{2}}(\psi^+_z\otimes \psi^-_z - \psi_z^- \otimes \psi_z^+),$ where $P_z^\pm \psi_z^\pm = \psi_z^\pm$. Then  
+$$
+P_z^+\otimes I(\Gamma) = \sqrt{\frac{1}{2}} (\psi_z^+\otimes \psi_z^-)
+$$
+and
+$$                                                                                                                                                                                                                                                                                                                       P_z^-\otimes I(\Gamma) = \sqrt{\frac{1}{2}} (\psi_z^- \otimes \psi_z^+).
+$$
 
 By Born's Rule, a measurement of $s_z\otimes I,$ the $z$-component of spin of particle 1, will yield the a value of $\frac{1}{2}$ with probability $\frac{1}{2}$ and a new state $\psi_z^+\otimes \psi_z^-,$ or a value of  $-\frac{1}{2}$ with probability $\frac{1}{2}$  and new state  $\psi_z^-\otimes \psi_z^+.$
 
@@ -93,12 +138,14 @@ As we see, Born's Rule gives us the correct temporal order of events. \emph{A me
 
 Here is a second, related argument. A Hermitean operator decomposes  Hilbert space into a direct sum of its eigenspaces. The operator $s_z\otimes s_z$ decomposes the four dimensional Hilbert space of the two particles as a direct sum $V_1\oplus V_2$ of the two 2 dimensional eigenspaces with the eigenvalues $\frac{1}{2}$ and $-\frac{1}{2}$. These subspaces have respective bases  $\{\psi_z^+\otimes \psi_z^+, \psi_z^-\otimes \psi_z^-\}$ and $\{\psi_z^-\otimes\psi_z^+, \psi_z^+\otimes \psi_z^-\}$. Now consider the direct sum operator $s_d\oplus s_z$ , where $s_d$  is the spin operator in an arbitrary direction $d$. Note that  $I\otimes s_z =  s_z\oplus s_z$, and that $s_d\oplus s_z$ has eigenstates  $\psi_z^-\otimes \psi_z^+$ and $\psi_z^+\otimes\psi_z^-$ with eigenvalues $+\frac{1}{2}$ and $-\frac{1}{2}$. As in EPR, with the two particles in the singleton state $\Gamma$, measure $s_z\otimes I$. Then the pair of particles will enter an eigenstate of $s_d\oplus s_z$ with opposite eigenvalue to $s_z\otimes I.$  Born's Rule tells us that a measurement of $s_d\oplus s_z$ is certain to give this opposite value to $s_z\otimes I.$ If however one maintains that $I\otimes s_z$ acquires an opposite value even before its measurement, it seems equally reasonable that for all $d$ each of the $s_d\oplus s_z$ acquires such an opposite value. However, the operators $s_d\oplus s_z$ do not pairwise commute for different values of $d$ and so do not form a Boolean algebra, as we expect of events that have happened.
 
-A final point: Born's Rule tells us that a given state assigns probabilities to the interaction algebra of every observable. Is it possible that Born's Rule does not exhaust the meaning of a state as a complex vector? After all, the rule gives the probability value $<\Gamma,  P \Gamma > = || P\Gamma ||^2$ to the new state. Could the complex vector contain more information than its absolute value squared, which possibly instantaneously effects the other particle? The answer is no, because of the following theorem. An assignment of a probability $p(P)$ to every projection which is a probability measure on every Boolean $\sigma$-algebra of projections determines a unique density operator w such that $p(P) = tr(wP)$. For pure states, which are extreme points of the convex set of such probabilities, $w$ is a rank 1 projection $P = | \Gamma ><\Gamma |,$ and $p(P) = < \Gamma, P \Gamma  >.$  This is a consequence of Gleason’s Theorem. (See [6] for details).  So an assignment of probabilities to the eigenvalues of all observables, as is done by Born's Rule, is sufficient to determine the complex vector, up to a phase factor, defining the state.                                                                                                      
+A final point: Born's Rule tells us that a given state assigns probabilities to the interaction algebra of every observable. Is it possible that Born's Rule does not exhaust the meaning of a state as a complex vector? After all, the rule gives the probability value $\langle \Gamma,  P \Gamma \rangle  = || P\Gamma ||^2$ to the new state. Could the complex vector contain more information than its absolute value squared, which possibly instantaneously effects the other particle? The answer is no, because of the following theorem. An assignment of a probability $p(P)$ to every projection which is a probability measure on every Boolean $\sigma$-algebra of projections determines a unique density operator w such that $p(P) = tr(wP)$. For pure states, which are extreme points of the convex set of such probabilities, $w$ is a rank 1 projection $P = | \Gamma \rangle \langle\Gamma |,$ and $p(P) = \langle \Gamma, P \Gamma  \rangle .$  This is a consequence of Gleason’s Theorem. (See [6] for details).  So an assignment of probabilities to the eigenvalues of all observables, as is done by Born's Rule, is sufficient to determine the complex vector, up to a phase factor, defining the state.                                                                                                      
 
-\section*{How EPR correlations are possible in different directions}
+\section{How EPR correlations are possible in different directions}
 An EPR correlation in a single direction $z$ is no more difficult to understand than a correlation of two classical spinning particles of total angular momentum zero. For the fixed direction $z$ the EPR correlation may exist simply because the spin components in the $z$ direction have opposite values, and they were set up to be so correlated by preparing the total spin component $S_z$ of both particles to be zero. 
 
-Thus, if we prepare the two particles to be in the state given by $S =1$ and $ S_z = 0,$ i.e. $\Gamma = \sqrt{\frac{1}{2}}(\psi_z^+\otimes \psi_z^- + \psi_z^-\otimes \psi_z^+)$, then the above calculation of the EPR correlation applies here to show the same correlation of opposite spin $z$-components. No one can claim for this case that we have superluminal effects, for they only exhibit the correlations which were set up by the initial state that $S_z = 0$ in a single direction $z$.
+Thus, if we prepare the two particles to be in the state given by $S =1$ and $ S_z = 0,$ i.e. 
+$$\Gamma = \sqrt{\frac{1}{2}}(\psi_z^+\otimes \psi_z^- + \psi_z^-\otimes \psi_z^+),$$
+then the above calculation of the EPR correlation applies here to show the same correlation of opposite spin $z$-components. No one can claim for this case that we have superluminal effects, for they only exhibit the correlations which were set up by the initial state that $S_z = 0$ in a single direction $z$.
 
 The new feature of EPR that is so puzzling is that the singleton state $S = 0$ yields spin correlations in different directions, say $z$ and $x$, where the spins $s_z$ and $s_x$ in those directions do not commute, and so cannot both have values simultaneously. How can correlations between spin components of two particles subsist when these spin components do not have values?
 
@@ -106,7 +153,7 @@ To understand how this can happen it is necessary to distinguish between events 
 
 Born's Rule deals with precisely this distinction. We have seen that a given state gives the probabilities of the interaction Boolean algebra of projections defined by any observable which may be measured. If a particular observable is measured, the interaction algebra, which gives the events that have actually happened, now takes truth values, and the system enters a projected new state, with the corresponding new probabilities for contingent future properties. 
 
-This feature is not restricted to quantum mechanics, but is common to phenomena with uncertain outcomes. Events $a$ and $b$ may each have probabilities other than 1 of occurring, while $a \vee b$ has probability 1. A famous example is Aristotle's sea battle. In [7],Chapter 9, he wrote  
+This feature is not restricted to quantum mechanics, but is common to phenomena with uncertain outcomes. Events $a$ and $b$ may each have probabilities other than 1 of occurring, while $a \vee b$ has probability 1. A famous example is Aristotle's sea battle. In [7], Chapter 9, he wrote  
 ``A sea-fight must either take place to-morrow or not, but it is not necessary that it should take place to-morrow, neither is it necessary that it should not take place, yet it is necessary that it either should or should not take place tomorrow. Since propositions correspond with facts, it is evident that when in future events there is a real alternative, and a potentiality in contrary directions, the corresponding affirmation and denial have the same character."
 
 For future contingencies Aristotle retains the Law of Excluded Middle, $a \vee a^\prime$, but drops the Principle of Bivalence, that a proposition is either true or false when it comes to necessary future truth. So for Aristotle the disjunction  $a\vee b$ may be certain and so have a truth value, although neither $a$ nor $b$, being uncertain, have a truth value. This extends to other logical connectives (which are definable from $\vee$ and $^\prime$). Thus, logical equivalence $a\leftrightarrow b$ (which may be defined as $(a\ .\ b) \vee (a^\prime \ . \ b^\prime))$ may be certain, while $a$ and $b$ have no truth value. For example, the correlation, given by the equivalence ``My cat stays indoors $\leftrightarrow$ it rains in Princeton" has a truth value (e.g. it may be false, if she stayed out in the rain last Tuesday) even though ``My cat stays indoors" and ``it rains in Princeton" are only assigned probabilities, depending on the weather and my cat's temperament.
@@ -123,14 +170,14 @@ s_x\otimes I = \frac{1}{2} \leftrightarrow I\otimes s_x = -\frac{1}{2} \hspace{1
 
  This way of understanding the EPR correlations for non-commutative spins is not an ad hoc approach to this particular experiment. In [6]  we show that any correlation between two systems can be understood in a like manner.                                
 
-\section*{Discussion}
+\section{Discussion}
 This is not simply a controversy about semantics, so that in the final analysis, there is no real difference between non-local effects and correlations. We have already mentioned that an eminent relativist, Penrose, was willing to countenance non-causal effects and a change in space-time geometry because of his belief in the non-local effects of EPR. Spin correlations are defined in spin space, and have nothing to do with spatial separation or non-locality. If two classical particles have total spin zero, then they will have opposite components of spin in any direction, whether they are separated or not. They have opposite spins because they were correlated by the condition of total spin zero. Two quantum spin particles of total spin 0 will equally have opposite spins when measured in any direction because they were set up to be correlated by having total spin zero, just as with classical correlations. The new quantum aspect is rooted in correlations such as (1) and (2) above, which are true even though the spins in those directions cannot both have truth values; but as we have argued above, any theory of future contingencies must allow for the truth of compound properties such as  $a\leftrightarrow b$ without their constituents having truth values.
 
-How did the idea that EPR exhibits non-locality arise? I believe it is based on a conflation of the two concepts of state and property. If a spin $\frac{1}{2}$ particle is in the state $\psi_z^+$, we say that it is in a state of ``spin $\frac{1}{2}$ in the $z$ direction." This an innocent conflation of the state $\psi_z^+$ and the property $P_z^+.$   The reason that it is harmless  is that $s_z$ is a rank 1 operator, so that $P_z^+(= |\psi_z^+ >< \psi_z^+|)$ has a one-dimensional image, viz. the ray containing $\psi_z^+$, and preparing the state $\psi_z^+$ also affirms the truth of the property $P_z^+$ in the interaction algebra $\{ P_z^+, P_z^-, 1, 0\}$.
+How did the idea that EPR exhibits non-locality arise? I believe it is based on a conflation of the two concepts of state and property. If a spin $\frac{1}{2}$ particle is in the state $\psi_z^+$, we say that it is in a state of ``spin $\frac{1}{2}$ in the $z$ direction." This an innocent conflation of the state $\psi_z^+$ and the property $P_z^+.$   The reason that it is harmless  is that $s_z$ is a rank 1 operator, so that $P_z^+(= |\psi_z^+ \rangle \langle \psi_z^+|)$ has a one-dimensional image, viz. the ray containing $\psi_z^+$, and preparing the state $\psi_z^+$ also affirms the truth of the property $P_z^+$ in the interaction algebra $\{ P_z^+, P_z^-, 1, 0\}$.
 
 When we consider a pair of particles in EPR, the situation is different. The observable $s_z\otimes I$ is a rank 2 operator, and $P_z^+\otimes I$  has a 2-dimensional image. The resulting state $\psi_z^+\otimes\psi_z^-$ is a vector lying in this image plane. It is tempting to similarly conflate this state with the conjunction of the properties $s_z\otimes I  =  +\frac{1}{2}$ and $I\otimes s_z = -\frac{1}{2}$, i.e. a state of spin $+\frac{1}{2}$  for particle 1 and spin $-\frac{1}{2}$ for particle 2. However, only the first particle has been measured, to give truth values to the interaction algebra $\{ P_z^+\otimes I, P_z^-\otimes I, 1, 0\}.$ All we can say of particle 2 is that it is certain to have the property $I\otimes  P_z^-$ of spin $-\frac{1}{2}$ if and when it is measured.  
 
-\section*{EPR and the Free Will Theorem}
+\section{EPR and the Free Will Theorem}
 In [8] we proved the Free Will Theorem (FWT) on the basis of three axioms. One of these, the TWIN Axiom, was the EPR experiment adapted to the spin 1 case. We used Lorentz invariance via the third axiom, MIN, to give a contradiction to the assumption that the particles’ responses are determined by the past. It is clearly important to the proof that, as we have argued above, there are no superluminal effects in the application of the TWIN axiom. We shall now give the relevant part of the proof of the FWT that uses the EPR axiom TWIN.
 
 At the same time, we recast the FWT by replacing MIN by a new axiom, LIN (Lorentz Invariance). Axiom LIN has the advantage over MIN in separating out the free will of the experimenters, and in dealing with a single experimenter rather than both. LIN is experimentally verifiable in principle, and is, I believe, universally accepted as true.
