--- a/1703.11003/Boughn-Bell-arXiv.tex
+++ b/1703.11003/Boughn-Bell-arXiv.tex
@@ -167,8 +167,8 @@ Taking the nonlocality of quantum mechanics as a given, these two philosophers, 
 
 \section{The Separation Principle}\label{SP}
 
-The conclusion of EPR was not that quantum mechanics is nonlocal nor that objective reality does not exist but rather that quantum mechanics is not a complete description of reality\footnote{ As just mentioned, Bell and Wiseman argue that even if quantum mechanics is incomplete, the quantum mechanical violation of Bell's inequality implies that it either violates the principles of relativity or objective reality does not exist.}. The argument in the EPR paper was based on a demonstration that quantum mechanics cannot simultaneously contain all elements of physical reality. Podolsky wrote the paper and Einstein was less than satisfied with it. Howard\cite{How07} points out that in a letter to Schr\''{o}dinger written a month after the EPR paper was published, Einstein chose to base his argument for incompleteness on what he termed the ``separation principle'' and continued to present this argument ``in virtually all subsequent published and
-unpublished discussions of the problem.''\cite{How07}  According to the separation principle, the real state of affairs in one part of space cannot be affected instantaneously or superluminally by events in a distant part of space. In his letter to Schr\''{o}dinger, Einstein explained\cite{How07}
+The conclusion of EPR was not that quantum mechanics is nonlocal nor that objective reality does not exist but rather that quantum mechanics is not a complete description of reality\footnote{ As just mentioned, Bell and Wiseman argue that even if quantum mechanics is incomplete, the quantum mechanical violation of Bell's inequality implies that it either violates the principles of relativity or objective reality does not exist.}. The argument in the EPR paper was based on a demonstration that quantum mechanics cannot simultaneously contain all elements of physical reality. Podolsky wrote the paper and Einstein was less than satisfied with it. Howard\cite{How07} points out that in a letter to Schr\"{o}dinger written a month after the EPR paper was published, Einstein chose to base his argument for incompleteness on what he termed the ``separation principle'' and continued to present this argument ``in virtually all subsequent published and
+unpublished discussions of the problem.''\cite{How07}  According to the separation principle, the real state of affairs in one part of space cannot be affected instantaneously or superluminally by events in a distant part of space. In his letter to Schr\"{o}dinger, Einstein explained\cite{How07}
 \begin{quote}
 After the collision, the real state of ({\it AB}) consists precisely of the real state {\it A} and the real state of {\it B}, which two states have nothing to do with one another. The real state of {\it B} thus cannot depend upon the kind of measurement I carry out on {\it A} [separation hypothesis]. But then for the same state of {\it B} there are two (in general arbitrarily many) equally justified $\Psi_B$, which contradicts the hypothesis of a one-to-one or complete description of the real states.
 \end{quote}
